--- a/package.json
+++ b/package.json
@@ -7,10 +7,22 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
+    "@popperjs/core": "^2.11.6",
+    "@vueform/multiselect": "^2.5.8",
+    "axios": "^1.2.6",
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue": "^2.23.1",
+    "core-js": "^3.27.2",
+    "jwt-decode": "^3.1.2",
+    "pinia": "^2.0.29",
+    "recaptcha-v3": "^1.10.0",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.3"
+    "vue-recaptcha": "^2.0.3",
+    "vue-recaptcha-v3": "^2.0.1",
+    "vue-router": "^4.0.3",
+    "vue-toastification": "^2.0.0-rc.5",
+    "vue3-toastify": "^0.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
